--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -7,9 +7,9 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: 123
-  host: localhost
+  username:
+  password:
+  host:
   pool: 5
 
 development:
